--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-copy": "^0.8.0",
+	"grunt-conventional-github-releaser": "^0.5.0",
     "grunt-gh-release": "0.0.2",
     "grunt-git": "^0.3.5",
     "grunt-version": "^1.0.0",
