fix(manifest): plugin dependencies are now more transparent

--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,8 @@
 	],
 	"require": {
 		"bower-asset/zxcvbn": "~4.1",
-		"bjeavons/zxcvbn-php": "*"
-	},
-	"require-dev": {
-		"composer/installers": "1.*"
+		"bjeavons/zxcvbn-php": "*",
+		"hypejunction/forms_api": "*"
 	}
 }
 
