--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
 		}
 	],
 	"require": {
+		"php": ">=5.5",
+		"composer/installers": "~1.0",
 		"bower-asset/zxcvbn": "~4.1",
 		"bjeavons/zxcvbn-php": "*",
-		"hypejunction/forms_api": "*"
+		"hypejunction/forms_api": "~1.0"
 	}
 }
 
