--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
 		"php": ">=5.5",
 		"composer/installers": "~1.0",
 		"bower-asset/zxcvbn": "~4.1",
-		"bjeavons/zxcvbn-php": "*",
-		"hypejunction/forms_api": "~1.0"
+		"bjeavons/zxcvbn-php": "*"
 	},
 	"suggest": {
 		"hypejunciton/forms_validation": "*"
